# query-bot

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  TODO_LIST.md  bot.py  build.gradle  pyproject.toml  requirements.txt  settings.gradle
.github/workflows/: release.yml
data/: .gitkeep  mcmod_data.json
plugins/common/: __init__.py  base.py  buffer.py  compat.py  config.py  decorators.py  deps.py  handler.py  plugin_base.py  protocols.py  receiver.py
plugins/common/services/: __init__.py  ai.py  ban.py  bot.py  chat.py  game.py  registry.py  system.py  token.py
plugins/echo/: __init__.py
plugins/help/: __init__.py
plugins/high_noon/: __init__.py
plugins/math_definition/: __init__.py
plugins/math_soup/: __init__.py  models.py  repository.py  service.py
plugins/mcmod_search/: __init__.py
plugins/pjskpartition/: __init__.py
plugins/random_reply/: __init__.py
plugins/status_control/: __init__.py
plugins/utils/: __init__.py  image.py  message.py  network.py  prompt.py
prompts/: math_concepts.json  math_def.txt  math_soup_judge.txt
src/main/java/com/anemone/bot/: AnemoneBotApplication.java
src/main/java/com/anemone/bot/base/: GameState.java  Result.java  ServiceBase.java
src/main/java/com/anemone/bot/config/: BotConfig.java  WebSocketConfig.java
src/main/java/com/anemone/bot/handler/: MessageHandler.java  PluginHandler.java
src/main/java/com/anemone/bot/protocols/: AIServiceProtocol.java  (+6 more)
src/main/resources/: application-example.yaml  math_concepts.json  pjsk_songs.json
src/main/resources/prompts/: math_soup_judge.txt
(+38 files in other folders)
